Integrated passing input, output for code from Add New to another activity. Code Editor layout changed. Displays the Input and Output Selected for the new pseudocode

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,4 +56,9 @@
 
     <style name="Theme.PseudoGen.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CodeEditorTitleEditText" parent="Theme.PseudoGen">
+        <item name="android:textColor">@color/indigo</item>
+        <item name="background">@color/dark_grey</item>
+    </style>
+
 </resources>
