--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -25,13 +25,36 @@
             android:minHeight="?actionBarSize"
             android:padding="@dimen/appbar_padding"
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/appbar_padding"
+            android:theme="@style/CodeEditorTitleEditText"
+            android:background="@color/light_grey">
+            <TextView
+                android:id="@+id/codeInputTextView"
+                android:layout_weight="5"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+            <TextView
+                android:id="@+id/codeOutputTextView"
+                android:textAlignment="center"
+                android:layout_weight="5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+        </LinearLayout>
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             app:tabSelectedTextColor="@color/bright_orange"
             app:tabTextColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/indigo" />
+            android:background="@color/indigo"
+            />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
