--- a/app/src/main/res/layout/add_new_code_dialog.xml
+++ b/app/src/main/res/layout/add_new_code_dialog.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical">
-
     <EditText
         android:id="@+id/titleEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Pseudocode Title"
-        android:inputType="text" />
+        android:inputType="text"
+        android:layout_weight="1"/>
     <EditText
         android:id="@+id/descriptionEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:layout_weight="1"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="4">
         <TextView
             android:id="@+id/label_inputDataStructure"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_height="fill_parent"
+            android:paddingTop="10dp"
             android:text="Input"
             android:layout_weight="4">
         </TextView>
         <Spinner
             android:id="@+id/codeInputSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_height="fill_parent"
+            android:layout_gravity="top|center"
             android:layout_marginTop="10dp"
             android:layout_weight="6"
             android:textColor="#ffffff" />
@@ -42,19 +45,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_weight="4"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/label_outputDataStructure"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_height="fill_parent"
+            android:paddingTop="10dp"
             android:text="Ouput"
             android:layout_weight="4">
         </TextView>
         <Spinner
             android:id="@+id/codeOutputSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_height="fill_parent"
+            android:layout_gravity="top|center"
             android:layout_marginTop="10dp"
             android:layout_weight="6" />
     </LinearLayout>
