--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -61,4 +61,8 @@
 
     <style name="Theme.PseudoGen.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CodeEditorTitleEditText" parent="Theme.PseudoGen">
+        <item name="background">@color/dark_grey</item>
+    </style>
+
 </resources>
