--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="indigo">#4B0082</color>
     <color name="bright_orange">#FFA500</color>
     <color name="dark_orange">#ff8c00</color>
+    <color name="green">#008000</color>
+
 </resources>
