Corrected code for textEditor highlighting keywords. highlights each keyword regardless of the frequency

--- a/app/src/main/res/layout/fragment_code_editor.xml
+++ b/app/src/main/res/layout/fragment_code_editor.xml
@@ -11,13 +11,12 @@
         android:id="@+id/inputCodeEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark_grey"
+        android:background="@color/white"
         android:gravity="top|start"
         android:hint="Add pseudocode here"
-        android:lines="25"
+        android:lines="35"
         android:scrollbars="vertical"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
