Changed styling of code editor bottom nav

--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -85,11 +85,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
-        android:textStyle="bold"
-        android:background="@color/black"
-        app:itemBackground="@color/black"
-        app:itemIconTint="@color/indigo"
-        app:itemTextColor="@color/bright_orange"
+        android:background="@color/dark_grey"
+        app:itemBackground="@color/dark_grey"
+        app:itemIconTint="@color/bright_orange"
+        app:itemTextColor="@color/white"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_nav_editor_shortcuts"
         app:theme="@style/Widget.BottomNavigationView"/>
