Adjusted size and changed color theme for Add New Dialog

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -65,4 +65,8 @@
         <item name="background">@color/dark_grey</item>
     </style>
 
+    <!--Alert Dialog-->
+    <style name="CutomAlertDialog" parent="Theme.PseudoGen">
+        <item name="background">@color/bright_orange</item>
+    </style>
 </resources>
