--- a/app/src/main/res/layout/add_new_code_dialog.xml
+++ b/app/src/main/res/layout/add_new_code_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
+    android:minHeight="400dp"
     android:layout_height="fill_parent"
     android:orientation="vertical">
     <EditText
@@ -9,59 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Pseudocode Title"
-        android:inputType="text"
-        android:layout_weight="1"/>
+        android:inputType="text"/>
     <EditText
         android:id="@+id/descriptionEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description"
-        android:inputType="textMultiLine"
-        android:layout_weight="1"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal"
-        android:layout_weight="4">
-        <TextView
-            android:id="@+id/label_inputDataStructure"
-            android:layout_width="match_parent"
-            android:layout_gravity="start"
-            android:layout_height="fill_parent"
-            android:paddingTop="10dp"
-            android:text="Input"
-            android:layout_weight="4">
-        </TextView>
+        android:inputType="textMultiLine"/>
         <Spinner
             android:id="@+id/codeInputSpinner"
+            android:spinnerMode="dialog"
+            android:prompt="@string/hint_input_resource"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="top|center"
-            android:layout_marginTop="10dp"
-            android:layout_weight="6"
-            android:textColor="#ffffff" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_weight="4"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/label_outputDataStructure"
-            android:layout_width="match_parent"
-            android:layout_gravity="start"
-            android:layout_height="fill_parent"
-            android:paddingTop="10dp"
-            android:text="Ouput"
-            android:layout_weight="4">
-        </TextView>
-        <Spinner
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
+       <Spinner
             android:id="@+id/codeOutputSpinner"
+            android:spinnerMode="dialog"
+            android:prompt="@string/hint_output_resource"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="top|center"
-            android:layout_marginTop="10dp"
-            android:layout_weight="6" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
 </LinearLayout>
