--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="pale">#fff9d0</color>
     <color name="indigo">#4B0082</color>
     <color name="bright_orange">#FFA500</color>
+    <color name="cream_orange">#FBC95A</color>
     <color name="dark_orange">#ff8c00</color>
     <color name="green">#008000</color>
 
