--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,15 +7,10 @@
     android:id="@+id/homeFragment"
     tools:context=".HomeFragment">
 
-    <ListView
-        android:id="@+id/homeListView"
+    <ExpandableListView
+        android:id="@+id/homeExpandableListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:theme="@style/Widget.AppCompat.NewListView">
-    </ListView>
+        android:layout_height="match_parent">
+    </ExpandableListView>
 
 </FrameLayout>
