--- a/app/src/main/res/layout/home_list_group.xml
+++ b/app/src/main/res/layout/home_list_group.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:id="@+id/homeListHeader"
+        android:layout_width="fill_parent"
+        android:background="@color/dark_grey"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:textSize="24dp"/>
 </LinearLayout>
