--- a/app/src/main/res/menu/code_list_menu.xml
+++ b/app/src/main/res/menu/code_list_menu.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="View Details">
+    <item android:id="@+id/editItem" android:title="Edit">
+
     </item>
-    <item  android:title="Delete">
+
+    <item android:id="@+id/deleteItem" android:title="Delete">
     </item>
 </menu>
