Added press highlight for editor shortcuts in CodeEditor

--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -86,10 +86,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
-        android:background="@color/dark_grey"
-        app:itemBackground="@color/dark_grey"
-        app:itemIconTint="@color/bright_orange"
-        app:itemTextColor="@color/white"
+        android:background="@color/black"
+        app:itemBackground="@color/black"
+        app:itemIconTint="@drawable/shortcuts_selector"
+        app:itemTextColor="@drawable/shortcuts_selector"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_nav_editor_shortcuts"
         app:theme="@style/Widget.BottomNavigationView"/>
