--- a/app/src/main/res/menu/code_editor_menu.xml
+++ b/app/src/main/res/menu/code_editor_menu.xml
@@ -9,4 +9,22 @@
         android:icon="@drawable/save_icon"
         app:showAsAction="ifRoom">
     </item>
+
+    <item android:id="@+id/settings_icon"
+        android:title="Editor Settings"
+        android:icon="@drawable/settings_icon"
+        app:showAsAction="ifRoom">
+        <menu>
+            <item
+                android:id="@+id/action_editDetails"
+                android:title="Edit Details" />
+            <item
+                android:id="@+id/action_hideShortcuts"
+                android:title="Hide Shortcuts" />
+            <item
+                android:id="@+id/action_backHome"
+                android:title="Back Home" />
+        </menu>
+    </item>
+
 </menu>
