--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,23 +2,29 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_home"
-        android:enabled="true"
-        android:title="Home"
-        android:icon="@drawable/home_icon"
-        app:showAsAction="ifRoom"/>
-    <item
         android:id="@+id/action_code"
         android:enabled="true"
         android:layout_width="fill_parent"
         android:title="My List"
         android:icon="@drawable/my_list_icon"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"/>
+
+    <!--<item
+        android:id="@+id/action_home"
+        android:enabled="true"
+        android:title=" "
+        android:icon="@drawable/home_icon"/>-->
+    <item android:id="@+id/action_data_structures"
+    android:title="Data Structures"
+        android:enabled="true"
+        android:icon="@drawable/datastructure_icon"
+        app:showAsAction="ifRoom">
+    </item>
     <item
-        android:id="@+id/action_premium"
+        android:id="@+id/action_algorithms"
         android:enabled="true"
         android:layout_width="fill_parent"
-        android:title="Premium"
-        android:icon="@drawable/premium_icon"
-        app:showAsAction="ifRoom" />
+        android:title="Algorithms"
+        android:icon="@drawable/algorithm_icon"
+        app:showAsAction="ifRoom"/>
 </menu>
