--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/code_editor_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:forceDarkAllowed="false"
     tools:context=".CodeEditorTabbedActivity">
-
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.PseudoGen.AppBarOverlay">
+        android:theme="@style/Theme.PseudoGen.AppBarOverlay"
+        app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/editorToolbar"
             android:layout_width="match_parent"
@@ -18,25 +21,18 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:titleTextAppearance="@style/Toolbar.TitleText">
         </androidx.appcompat.widget.Toolbar>
-<!--        <TextView
-            android:id="@+id/tabActivityTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minHeight="?actionBarSize"
-            android:padding="@dimen/appbar_padding"
-            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />-->
         <LinearLayout
+            android:id="@+id/io_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:theme="@style/CodeEditorTitleEditText"
             android:padding="@dimen/appbar_padding"
-            android:background="@color/light_grey">
+            android:background="@color/code_editor_dark">
             <TextView
                 android:id="@+id/codeInputTextView"
                 android:layout_weight="5"
-                android:textColor="@color/indigo"
+                android:textColor="@color/white"
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -44,23 +40,22 @@
             <TextView
                 android:id="@+id/codeOutputTextView"
                 android:textAlignment="center"
-                android:textColor="@color/green"
+                android:textColor="@color/white"
                 android:layout_weight="5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
         </LinearLayout>
-        <com.google.android.material.tabs.TabLayout
+<!--        <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             app:tabSelectedTextColor="@color/bright_orange"
             app:tabTextColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/indigo"
-            />
+            android:background="@color/indigo"/>-->
     </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.viewpager.widget.ViewPager
+<!--        <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -78,7 +73,15 @@
             android:clickable="true"
             android:background="@color/bright_orange"
             android:backgroundTint="@color/indigo"
-            android:src="@drawable/compile_icon"/>
+            android:src="@drawable/compile_icon"/>-->
+    <FrameLayout
+        android:id="@+id/editor_fragment_container"
+        android:layout_width="match_parent"
+        android:forceDarkAllowed="false"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/appBar"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavEditShortCuts">
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavEditShortCuts"
@@ -92,6 +95,6 @@
         app:itemTextColor="@drawable/shortcuts_selector"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_nav_editor_shortcuts"
-        app:theme="@style/Widget.BottomNavigationView"/>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        app:theme="@style/Widget.BottomNavigationView"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
