--- a/app/src/main/res/layout/fragment_code_editor.xml
+++ b/app/src/main/res/layout/fragment_code_editor.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CodeEditorFragment"
+    android:forceDarkAllowed="false"
     android:id="@+id/fragment_code_editor">
 
     <com.maharshiappdev.pseudogen.LineNumberedEditText
         android:id="@+id/inputCodeEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:forceDarkAllowed="false"
         android:gravity="top|start"
         android:hint="Add pseudocode here"
         android:inputType="textMultiLine|textNoSuggestions"
@@ -23,8 +24,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:theme="@style/Widget.AppCompat.NewEditText">
-
+        android:background="@color/code_editor_dark"
+        android:textColor="@color/white"
+        android:fontFamily="@font/fira_mono_medium">
     </com.maharshiappdev.pseudogen.LineNumberedEditText>
-
 </FrameLayout>
