--- a/app/src/main/res/menu/bottom_nav_editor_shortcuts.xml
+++ b/app/src/main/res/menu/bottom_nav_editor_shortcuts.xml
@@ -6,16 +6,27 @@
         android:enabled="true"
         android:title="TAB"
         app:showAsAction="ifRoom"/>
-    <item
-        android:id="@+id/action_semicolon"
-        android:layout_width="fill_parent"
-        android:enabled="true"
-        android:title=";"
-        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_ifelse"
         android:enabled="true"
         android:layout_width="fill_parent"
         android:title="if-else"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_for" android:title="for"
+        android:layout_width="fill_parent"
+        android:enabled="true">
+    </item>
+
+    <item android:title="while" android:id="@+id/action_while"
+        android:layout_width="fill_parent"
+        android:enabled="true">
+    </item>
+    <item
+        android:id="@+id/action_semicolon"
+        android:layout_width="fill_parent"
+        android:enabled="true"
+        android:title=";"
         app:showAsAction="ifRoom" />
 </menu>
